fix(layout): add additional spacing steps

--- a/packages/layout/examples/basic/styles.scss
+++ b/packages/layout/examples/basic/styles.scss
@@ -43,6 +43,7 @@ body {
     height: spacing($index);
     background-color: black;
     margin-right: mini-units(3);
+    margin-bottom: mini-units(3);
   }
 }
 
