--- a/packages/layout/scss/_spacing.scss
+++ b/packages/layout/scss/_spacing.scss
@@ -11,7 +11,9 @@ $spacing-scale: (
   mini-units(3),
   mini-units(4),
   mini-units(6),
-  mini-units(8)
+  mini-units(8),
+  mini-units(10),
+  mini-units(12)
 );
 
 /// Get the value of the spacing scale at the given step. The first step is
